# FinalDesign

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  copy.sh  demo
config/: config.json  config.json.bak  config.yaml
input/: demo.ll  demo1.ll  slcan-lts.bc  slcan-ups.bc  slcan-ups.ll
output/: demo.ll_main_CFG.dot  demo.ll_usep_CFG.dot  demo1.ll_main_CFG.dot  demo1.ll_usep_CFG.dot
python_scripts/: main.py
python_scripts/config/: config.py  template.json
python_scripts/diff_test/: diff.py
python_scripts/diff_test/string_match/: a.out  main.cpp
python_scripts/func_detect/: func_detect.py  func_detect_v2.py  select_main_only_commit.py
python_scripts/ir_files/: ip_output_ups.ll  slcan_lts.ll
python_scripts/llvm_tool/config/: config.json
python_scripts/patches/: patch_1  patch_2
python_scripts/single2ir/: main.py  single2ir.py  test.sh
src/: common.cpp  common.h  controlFlowAnalysis.cpp  controlFlowAnalysis.h  dataFlowAnalysis.cpp  dataFlowAnalysis.h  main.cpp
